fix: resolved code smell